--- a/multiworld-bukkit/pom.xml
+++ b/multiworld-bukkit/pom.xml
@@ -25,8 +25,19 @@
         </repository>
 
         <repository>
+            <id>papermc-repo</id>
+            <url>https://papermc.io/repo/repository/maven-releases/</url>
+        </repository>
+
+        <repository>
             <id>placeholderapi</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
+
+        <repository>
+            <id>essentialsx-releases</id>
+            <name>EssentialsX API Repository</name>
+            <url>https://repo.essentialsx.net/releases</url>
         </repository>
     </repositories>
 
@@ -77,6 +88,13 @@
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>${dependency.annotations.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>net.essentialsx</groupId>
+            <artifactId>EssentialsX</artifactId>
+            <version>2.20.1</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
